# chainmock

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: ci.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: api_reference.md  index.md  requirements.txt  unittest_comparison.md  user_guide.md
docs/assets/: extra.css  icon_attribution
docs/hooks/: hide_lines.py
docs/user_guide/: advanced_usage.md  argument_matching.md  async_mocking.md  getting_started.md  mocking.md  mocking_modules.md  mocking_properties.md  patching.md  spying.md  stubs.md
mokit/: __init__.py  _api.py  _pytest_plugin.py
src/chainmock/: __init__.py  _api.py  _doctest.py  _pytest_plugin.py  _unittest.py  mock.py
tests/: __init__.py  common.py  conftest.py  test_async_mocking.py  test_async_spying.py  test_chainmock.py  test_doctest.py  test_mocking.py  test_module_mock.py  test_patching.py  test_pytest_plugin.py  test_spying.py  test_stubbing.py  utils.py
tests/integrations/: __init__.py  i_doctest.py  i_pytest.py  i_unittest.py
