[project]
name = "chainmock"
version = "2.0.0"
description = "Mocking library for Python and Pytest"
authors = [{ name = "Olli Paakkunainen", email = "olli@paakkunainen.fi" }]
license = "MIT"
requires-python = ">=3.10,<4"
readme = "README.md"
keywords = ["testing", "mock", "mocking", "pytest"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/ollipa/chainmock"
Documentation = "https://chainmock.readthedocs.io"
"Issue Tracker" = "https://github.com/ollipa/chainmock/issues"

[project.entry-points.pytest11]
chainmock = "chainmock._pytest_plugin"

[dependency-groups]
dev = [
    "mypy",
    "ipython",
    "pytest-asyncio",
    "coverage",
    "tox",
    "mkdocs-material",
    "markdown-include",
    "mkdocstrings",
    "pytest>= 6.2.0",
    "mkdocstrings-python",
    "ruff",
]

[tool.hatch.build.targets.sdist]
include = ["src/chainmock"]

[tool.hatch.build.targets.wheel]
include = ["src/chainmock"]

[tool.hatch.build.targets.wheel.sources]
"src/chainmock" = "chainmock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
