[project]
name = "chainmock"
version = "2.0.0"
description = "Mocking library for Python and Pytest"
authors = [{ name = "Olli Paakkunainen", email = "olli@paakkunainen.fi" }]
license = "MIT"
requires-python = ">=3.10,<4"
readme = "README.md"
keywords = ["testing", "mock", "mocking", "pytest"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/ollipa/chainmock"
Documentation = "https://chainmock.readthedocs.io"
"Issue Tracker" = "https://github.com/ollipa/chainmock/issues"

[project.entry-points.pytest11]
chainmock = "chainmock._pytest_plugin"

[dependency-groups]
dev = [
    "ipython",
    "pytest-asyncio",
    "coverage",
    "tox",
    "mkdocs-material",
    "markdown-include",
    "mkdocstrings",
    "pytest>= 6.2.0",
    "mkdocstrings-python",
    "ruff",
    "ty",
]

[tool.hatch.build.targets.sdist]
include = ["src/chainmock"]

[tool.hatch.build.targets.wheel]
include = ["src/chainmock"]

[tool.hatch.build.targets.wheel.sources]
"src/chainmock" = "chainmock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle error
    "W",     # pycodestyle warning
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q0",    # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TD",    # flake8-todos
    "ARG",   # flake8-unused-arguments
    "FLY",   # flynt
    "I",     # isort
    "N",     # pep8-naming
    "PERF",  # perflint
    "D",     # pydocstyle
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "UP",    # pyupgrade
    "FURB",  # refurb
    "RUF",   # ruff
    "TRY",   # tryceratops
]
ignore = [
    "S101",    # assert detected
    "S311",    # standard pseudo-randomness
    "D105",    # missing docstring in magic method
    "D107",    # missing docstring in __init__ method
    "D203",    # incorrect-blank-line-before-class
    "D205",    # blank line between summary and description
    "D213",    # multi-line-summary-second-line
    "D401",    # first line should be in imperative mood (false positives)
    "PLR2004", # magic-value-comparison
    "PLR0913", # too-many-arguments
    "TRY003",  # raise-vanilla-args
    "TRY004",  # type-check-without-type-error
]

[tool.ruff.lint.per-file-ignores]
# Ignore docstring errors in tests.
"tests/**.py" = ["D"]

[tool.pytest.ini_options]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
